# bugpot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: apply-config.yml  ci.yml  rollout.yml
apps/: example.toml
cmd/bugpot/: Cargo.toml
cmd/bugpot-cli/: Cargo.toml
cmd/bugpot-cli/src/: main.rs
cmd/bugpot/src/: controller.rs  main.rs
cmd/bugpotd/: Cargo.toml
cmd/bugpotd/src/: bootstrap.rs  config.rs  main.rs  secrets.rs
crates/bugpot-admin/: Cargo.toml
crates/bugpot-admin/src/: auth.rs  backend.rs  deploy_key.rs  error.rs  handlers.rs  lib.rs
crates/bugpot-config/: Cargo.toml
crates/bugpot-config/benches/: spec.rs
crates/bugpot-config/src/: lib.rs
crates/bugpot-controller/: Cargo.toml
crates/bugpot-controller/src/: error.rs  handle.rs  lib.rs  mempressure.rs  persist.rs  probe.rs  view.rs
crates/bugpot-core/: Cargo.toml
crates/bugpot-core/src/: handle.rs  lib.rs  persist.rs  probe.rs  registry.rs  store.rs  view.rs
crates/bugpot-core/src/ops/: boot.rs  crud.rs  lifecycle.rs  loops.rs  mod.rs  resolver.rs  rollout.rs
crates/bugpot-egress/: Cargo.toml
crates/bugpot-egress/benches/: allowlist.rs
crates/bugpot-egress/src/: allocator.rs  allowlist.rs  dns.rs  endpoints.rs  lib.rs  netns.rs  nft.rs
crates/bugpot-metrics/: Cargo.toml
crates/bugpot-metrics/src/: lib.rs
crates/bugpot-router/: Cargo.toml
crates/bugpot-router-port/: Cargo.toml
crates/bugpot-router-port/src/: lib.rs
crates/bugpot-router/benches/: subdomain.rs
crates/bugpot-router/src/: lib.rs
crates/bugpot-router/tests/: proxy.rs
crates/bugpot-runtime/: Cargo.toml
crates/bugpot-runtime/src/: auth.rs  caps.rs  cgroup_stats.rs  error.rs  image.rs  lib.rs  logs.rs  resources.rs  runtime.rs  seccomp.rs  spec.rs  volumes.rs
docs/: deploy.md
examples/: bugpot.service  bugpotd.service  github-actions-deploy.yml
examples/app-repo-template/: Dockerfile  README.md
examples/app-repo-template/.github/workflows/: deploy.yml
examples/ops-repo-template/: README.md
examples/ops-repo-template/.github/workflows/: apply.yml
examples/ops-repo-template/apps/: alpha.toml
examples/self-hosted/: README.md  gotify.toml  linkding.toml  vaultwarden.toml
experiments/youki-sandbox/: Cargo.toml
experiments/youki-sandbox/src/: main.rs
lima/: bugpot.yaml
scripts/: dev-server.sh  run-local.sh  smoke-app.sh  smoke-bluegreen.sh  smoke-freeze.sh  smoke-infra.sh  smoke-multi.sh  smoke-readiness.sh  smoke-volume.sh
scripts/analysis/: Cargo.toml  REPORT.md  hotspots.py
scripts/analysis/src/: main.rs
