[workspace]
resolver = "3"
members = [
    "cmd/bugpot",
    "cmd/bugpotd",
    "crates/bugpot-admin",
    "crates/bugpot-config",
    "crates/bugpot-core",
    "crates/bugpot-egress",
    "crates/bugpot-metrics",
    "crates/bugpot-router",
    "crates/bugpot-runtime",
    "experiments/youki-sandbox",
    "scripts/analysis",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"
authors = ["Satoshi Amemiya <amemiya@proton.me>"]
description = "Internal Heroku-like platform for experimental apps"
repository = "https://github.com/rail44/bugpot"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
hyper = "1"
walkdir = "2"
async-trait = "0.1"
thiserror = "2"
metrics = "0.24"
humantime = "2"
futures = "0.3"
inotify = { version = "0.11", default-features = false, features = ["stream"] }
divan = "0.1"
# `nix` is pinned at the workspace level so every crate that touches
# libcontainer's `Signal` type uses the *same* nix version libcontainer
# itself was built with (currently 0.29 for `libcontainer 0.6.x`). A
# mismatch makes `Signal::from(NixSignal::SIGTERM)` fail to type-check
# across crate-version boundaries. Bump this in lock-step when
# libcontainer bumps.
nix = { version = "0.29", default-features = false }

bugpot-admin = { path = "crates/bugpot-admin" }
bugpot-config = { path = "crates/bugpot-config" }
bugpot-core = { path = "crates/bugpot-core" }
bugpot-egress = { path = "crates/bugpot-egress" }
bugpot-metrics = { path = "crates/bugpot-metrics" }
bugpot-router = { path = "crates/bugpot-router" }
bugpot-runtime = { path = "crates/bugpot-runtime" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
# `tokio_unstable` is an opt-in cfg gating tokio's unstable APIs
# (used by `tokio-metrics` for richer RuntimeMetrics fields and by
# `console-subscriber` in the planned P3 follow-up). Declared here
# so rustc's check-cfg doesn't warn when the cfg is absent from the
# default build.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Unavoidable in this workspace
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
# Doc requirements relaxed at this stage; revisit before stabilization
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Internal workspace, no plan to publish to crates.io
cargo_common_metadata = "allow"
