[package]
name = "bugpot"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "bugpot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ipnet = "2"
metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bugpot-admin.workspace = true
bugpot-config.workspace = true
bugpot-controller.workspace = true
bugpot-egress.workspace = true
bugpot-metrics.workspace = true
bugpot-router.workspace = true
bugpot-runtime.workspace = true
nix = { version = "0.29", features = ["user"] }

[lints]
workspace = true
