[package]
name = "bugpot"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

# Pure Rust — explicitly portable to macOS / non-Linux dev hosts so
# operators can run the CLI from their laptop against a remote bugpotd.
# Do NOT add Linux-only deps (`libcontainer`, `nix`, `inotify`, etc.).
[[bin]]
name = "bugpot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json = "1"
tokio = { workspace = true }
toml.workspace = true

[lints]
workspace = true
