[package]
name = "bugpot-admin"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde = { workspace = true }
serde_json = "1"
subtle = "2"
tokio.workspace = true
tracing.workspace = true
zeroize = "1"
bugpot-config.workspace = true
bugpot-controller.workspace = true

[lints]
workspace = true
