[package]
name = "bugpot-admin"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hex = "0.4"
hmac = "0.13"
serde = { workspace = true }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
tokio.workspace = true
tower = { version = "0.5", features = ["buffer", "limit"] }
tower-http = { version = "0.6", features = ["limit"] }
tracing.workspace = true
zeroize = "1"
bugpot-config.workspace = true
bugpot-controller.workspace = true
bugpot-egress.workspace = true
bugpot-runtime.workspace = true

[lints]
workspace = true
