[package]
name = "bugpot-config"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
humantime.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
tracing.workspace = true

[lints]
workspace = true
