[package]
name = "bugpot-config"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
fs-mistrust = { version = "0.14", default-features = false }
humantime.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
