[package]
name = "bugpot-controller"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true }
toml.workspace = true
bugpot-config.workspace = true
bugpot-egress.workspace = true
bugpot-router.workspace = true
bugpot-runtime.workspace = true

[lints]
workspace = true
