[package]
name = "bugpot-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
humantime.workspace = true
metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true }
thiserror.workspace = true
toml.workspace = true
bugpot-config.workspace = true
bugpot-egress.workspace = true
bugpot-router-port.workspace = true
bugpot-runtime.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
