[package]
name = "bugpot-metrics"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = { version = "0.17", default-features = false }
tokio.workspace = true
tokio-metrics = { version = "0.5", default-features = false, features = ["rt"] }
tracing.workspace = true

[lints]
workspace = true
