[package]
name = "bugpot-router"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
http-body-util = "0.1"
hyper.workspace = true
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "server", "server-auto", "service", "tokio"] }
ipnet = "2"
metrics.workspace = true
tokio.workspace = true
thiserror.workspace = true
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit", "timeout"] }
tracing.workspace = true
bugpot-config.workspace = true

[dev-dependencies]
divan.workspace = true
http-body-util = "0.1"

[[bench]]
name = "subdomain"
harness = false

[lints]
workspace = true
