[package]
name = "bugpot-runtime"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
inotify.workspace = true
metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
bugpot-config.workspace = true
serde = { workspace = true }
serde_json = "1"
thiserror = "2"
oci-client = "0.16"
# `oci-spec` is not declared here on purpose: libcontainer 0.6 does
# `pub use oci_spec;`, and our code reaches it as
# `libcontainer::oci_spec`. That keeps our version in lock-step with
# libcontainer's automatically and removes a manual pin. See
# CLAUDE.md > Dependency policy.
# seccomp + v2 cgroup + systemd. Requires `libseccomp-dev` on the build
# host (Ubuntu: `apt install libseccomp-dev`; the Lima provisioning in
# `lima/bugpot.yaml` installs it). Runtime needs `libseccomp2`.
libcontainer = { version = "0.6", default-features = false, features = ["v2", "systemd", "libseccomp"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
hex = "0.4"
nix = { workspace = true, features = ["signal", "fs"] }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
