[package]
name = "bugpot-analyzer"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false
description = "Dev-only static-analysis CLI for the bugpot workspace (hotspot ranking + per-fn complexity)."

[lints]
workspace = true

[[bin]]
name = "hotspot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
